<resources>
    <string name="app_name">Bisq2 Mobile</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="dashboard_bisq_easy">Introducing the new \'Bisq Easy\' chat based trade protocol</string>
    <string name="dashboard_chat">Community focus with discussion chat, academy and event space</string>
    <string name="dashboard_trade_apps"><![CDATA[Trade protocols coming soon:\nMultisig, Lightning, Monero,...]]></string>
    <string name="welcome">Welcome to Bisq 2</string>
    <string name="welcome_line2">What\'s new</string>
    <string name="home_button_start">Start</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="parse_error">Parse error</string>
    <string name="server_not_responding">Server not responding</string>
    <string name="no_internet">No Internet</string>
    <string name="connection_timeout">Connection timeout</string>
    <string name="home_welcome">"Buy and sell bitcoin for fiat \n(or other cryptocurrencies) privately \nand securely using Bisq's peer-to-peer \nnetwork and open-source desktop \nsoftware. No registration required."</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_trading_home">TradingHomeActivity</string>
    <string name="title_activity_bisq_easy">BisqEasyActivity</string>
    <string name="title_activity_trading_btc">TradingBtcActivity</string>
    <string name="title_activity_select_market">SelectMarketActivity</string>
    <string name="welcome_profile">Set up user profile</string>
    <string name="welcome_profile_line2">"Generate a Robo-hash user icon and unique id\nderived from your public key"</string>
    <string name="unique_id_label">UNIQUE ID</string>
    <string name="unique_id_placeholder">Repeatedly-Professional-Itinerary-410</string>
    <string name="regenerate_line">RE-GENERATE</string>
    <string name="profile_button_next">Next</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_events">Events</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_learn">Learn</string>
    <string name="menu_trade_apps">Trade apps</string>
    <string name="menu_new_trade_apps">New Trade apps</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_bisq_easy">Bisq Easy</string>
    <string name="menu_liquid_swaps">Liquid Swaps</string>
    <string name="menu_bisq_multisig">Bisq Multisig</string>
    <string name="menu_xmr_swaps">XMR Swaps</string>
    <string name="lightning_mpc">Lightning MPC</string>
    <string name="menu_bsq_swaps">BSQ Swaps</string>
    <string name="create_your_first_offer">Create your first offer</string>
    <string name="browse_existing_offers">Browse existing offers</string>
    <string name="how_do_you_want_to_start">How do you want to start?</string>
    <string name="bisq_easy_create_and_publish_your_offer">Create and publish your offer</string>
    <string name="bisq_easy_check_out_offers">Check out the offers in the trade chat</string>
    <string name="bisq_easy_send_fiat_first">As BTC buyer, you need to send Fiat first. Seller sends the Bitcoin after Fiat payment received.</string>
    <string name="bisq_easy_enter_private_chat">Wait until someone takes your offer. Enter private chat and exchange payment details.</string>
    <string name="bisq_easy_action_create_offer">Create offer</string>
    <string name="bisq_easy_show_intro">Don\'t show introduction screen again</string>
    <string name="bisq_easy_enter_private_chat2">Take an offer and start a private chat with the seller to exchange the payment details.</string>
    <string name="bisq_easy_action_browse_offers">Browse offers</string>
    <string name="profile_set_nickname">Set Nickname</string>
    <string name="trading_home_create_offers">Create an offer or browse the trade chat for open offers</string>
    <string name="trading_home_private_chat">Exchange the trade details in a private chat with your peer</string>
    <string name="bisq_easy_nav_2_action">Enter Bisq Easy</string>
    <string name="trading_home_reputation">Security is based on seller\'s reputation</string>
    <string name="trading_apps">Trade apps</string>
    <string name="trade_apps_explainer">Check out the roadmap for the new trade protocols. Bisq Easy is the first one deployed.</string>
    <string name="trade_apps_nav_2_action">Explore trade apps</string>
    <string name="join_community_nav_2_action">Join the community</string>
    <string name="join_community_explainer">Discuss with other Bisq users in the community chat. Learn all things Bitcoin and explore the events space.</string>
    <string name="join_community">Join the community</string>
    <string name="zero_currency">0.00</string>
    <string name="default_btc_rate">BTC/EUR</string>
    <string name="latest_market_price_label">Latest market price</string>
    <string name="online_count_label">Others online</string>
    <string name="active_users_label">Active users</string>
    <string name="zero_integer">0</string>
</resources>