<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/nav_start"
            android:icon="@mipmap/ic_bisq_logo_start"
            android:title="@string/menu_home"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@mipmap/ic_menu_dashboard"
            android:title="@string/menu_dashboard"
            app:showAsAction="ifRoom"/>
        <item
        android:id="@+id/nav_new_trade_apps"
        android:icon="@mipmap/ic_menu_trade_apps_round"
        android:title="@string/menu_new_trade_apps"
        app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/nav_trade_apps"
            android:icon="@mipmap/ic_menu_trade_apps"
            android:title="@string/menu_trade_apps"
            app:showAsAction="ifRoom">
            <menu>
                <group android:id="@+id/nav_trade_apps_group" android:checkableBehavior="single">
                    <item android:id="@+id/nav_bisq_easy" android:title="@string/menu_bisq_easy" />
                    <item android:id="@+id/nav_liquid_swaps" android:title="@string/menu_liquid_swaps" />
                    <item android:id="@+id/nav_bisq_multisig" android:title="@string/menu_bisq_multisig" />
                    <item android:id="@+id/nav_xmr_swaps" android:title="@string/menu_xmr_swaps" />
                    <item android:id="@+id/nav_lightning_mpc" android:title="@string/lightning_mpc" />
                    <item android:id="@+id/nav_bsq_swaps" android:title="@string/menu_bsq_swaps" />
                </group>
            </menu>
        </item>
        <item
            android:id="@+id/nav_chat"
            android:icon="@mipmap/ic_menu_chat"
            android:title="@string/menu_chat"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/nav_learn"
            android:icon="@mipmap/ic_menu_learn"
            android:title="@string/menu_learn"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/nav_events"
            android:icon="@mipmap/ic_menu_events"
            android:title="@string/menu_events"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/nav_wallet"
            android:icon="@mipmap/ic_menu_wallet"
            android:title="@string/menu_wallet"
            app:showAsAction="ifRoom"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_menu_settings"
            android:title="@string/menu_settings"
            app:showAsAction="ifRoom"/>

</menu>