<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="?attr/fullscreenBackgroundColor"
    android:gravity="center"
    android:orientation="vertical"
    android:divider="@drawable/divider40p"
    android:showDividers="middle"
    android:theme="@style/ThemeOverlay.Bisq2Mobile.FullscreenContainer"
    tools:context=".FragmentUserProfile">

    <TextView
        android:id="@+id/welcomeProfileText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_profile"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/welcomeProfileLine2Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_profile_line2"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="@color/grey" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:srcCompat="@mipmap/welcome_profile"
        android:contentDescription="@string/welcome_profile" />

    <TextView
        android:id="@+id/uniqueIdLabelText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/unique_id_label"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/grey" />

    <TextView
        android:id="@+id/uniqueIdText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/unique_id_placeholder"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/nickName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:inputType="text"
        android:hint="@string/profile_set_nickname"
        android:text="@string/unique_id_placeholder"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/regenerateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/regenerate_line"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="gravity"
        android:textAllCaps="true"
        android:textColor="@color/grey" />

    <Button
        android:id="@+id/nextStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_button_next"
        android:onClick="startButtonClick"
        app:backgroundTint="@color/green_kelly" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>